--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,6 +3,11 @@
   justify-content: center;
   border-bottom: 1px solid rgb(243, 243, 243);
 }
+.h-logo{
+font-size:24px;
+  color:blue;
+  font-weight:bold;
+}
 
 @media screen and (max-width: 768px) {
   .nav-header {
