--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,7 +3,7 @@
   justify-content: center;
   border-bottom: 1px solid rgb(243, 243, 243);
 }
-.h-logo{
+.logo-h{
 font-size:24px;
   color:blue;
   font-weight:bold;
